# azurecontainerapp-job-rs

./: .gitignore  Cargo.toml  README.md  customRoleDefinition.json  demo.mov  role_assign.sh  role_define.sh
src/: apis.rs  entities.rs  main.rs
